--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-plugin-react-redux",
-  "version": "1.1.0",
-  "description": "Gatsby plugin for React-Redux with built-in server-side rendering support",
+  "name": "gatsby-plugin-react-redux-providers",
+  "version": "1.0.0",
+  "description": "Gatsby plugin for React-Redux with built-in server-side rendering support with providers",
   "keywords": [
     "gatsby",
     "gatsby-plugin",
@@ -20,7 +20,7 @@
     "format": "prettier --write {src,examples}/**/*.{js,jsx}",
     "lint": "eslint ./src"
   },
-  "author": "Leonid Nikiforenko <leo.nikiforenko@gmail.com>",
+  "author": "Sebastian Kłosiński",
   "license": "MIT",
   "dependencies": {
     "serialize-javascript": "^5.0.1"
