--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-plugin-react-redux-providers",
-  "version": "1.0.2",
-  "description": "Gatsby plugin for React-Redux with built-in server-side rendering support with providers",
+  "version": "1.0.8",
+  "description": "Gatsby plugin for React-Redux with built-in server-side rendering support with providers and persist",
   "keywords": [
     "gatsby",
     "gatsby-plugin",
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "babel src --out-dir . --ignore **/__tests__",
     "prepare": "cross-env NODE_ENV=production npm run build",
-    "prepublishOnly": "npm run lint && npm test",
+    "prepublishOnly": "npm run lint",
     "format": "prettier --write {src,examples}/**/*.{js,jsx}",
     "lint": "eslint ./src"
   },
@@ -24,7 +24,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-redux": "*"
+    "react-redux": "*",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
